  * Added default override of page level waits - Druid.default_page_wait
  * Added default override of element level waits - Druid.default_element_wait
  * Added the ability to find a TableRow by providing a String to the [] method
  * Added the ability to find a TableCell by providing a String to the [] method from TableRow
  * Updated link to be able to identify by title
* Fixes
  * Modified text area methods so it clears before setting new text
  * Updated [] method on Table to return nil when bad row header is provided
  * Updated [] method on TableRow to return nil when bad column header is provided
=== 2016-12-26
* Enhancement
  * Changed page_url to accept a symbol that will cause it to call a corresponding method
  * Updated all accessor methods to take a default identifier of {:index => 0}
  * Added a page level element method to return a generic Element object
  * Updated all page level element locators to take a default identifier of {:index => 0}
  * Added a method to retrieve all file fields on a page
=== 2016-12-23
* Enhancement
  * Added #execute_script method to Druid
  * Added support for finding the following using :css
      Button
      Link
  * Added method to fetch generic element
  * Support alias method 'on' for 'on_page', 'visit' for 'visit_page' on PageFactory
  * Changed Elements.element_class_for so parameters can be strings or symbols
  * Added element_with_focus method to return the element that has focus
  * Added support for the label element
=== 2016-12-20
* Fixes
  WARNING: This change breaks existing code
  * Changed the generated getter for select_list to return the text instead of the value
* Enhancements
  * Added #expected_title method to Druid
  * Added #expected_element method to Druid
=== Version 1.1.2 /2016-12-19
* Enhancements
  * Added #include? and #selected? to SelectList
  * Added #append to TextField
  * Added #wait_for_ajax support for the jQuery framework
  * Added #wait_for_ajax support for the Prototype framework